Fix overlap

--- a/src/modules/user-actions/user-actions.scss
+++ b/src/modules/user-actions/user-actions.scss
@@ -43,6 +43,7 @@
       display: flex;
       gap: 5rem;
       height: 100%;
+      // align-items: center;
 
       .container {
         justify-content: space-between;
@@ -62,9 +63,9 @@
       margin: 0;
       padding: 0.5rem;
       color: #ca473d;
-      align-self: flex-start;
       animation: error-appearance 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
       z-index: -1;
+      align-self: center;
     }
 
     input {
@@ -127,7 +128,7 @@
         gap: 1.5rem;
 
         .container {
-          justify-content: flex-start;
+          align-items: center;
           gap: 1.5rem;
         }
       }
